--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,5 +18,5 @@ classifiers = [
 ]
 
 [project.urls]
-Homepage = "https://github.com/pypa/sampleproject"
-Issues = "https://github.com/pypa/sampleproject/issues"
+Homepage = "https://github.com/WoollySensed-Software/WSS-ToolKit"
+Issues = "https://github.com/WoollySensed-Software/WSS-ToolKit/issues"
