--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@ requires = ["setuptools>=61.0"]
 build-backend = "setuptools.build_meta"
 
 [project]
-name = "WConfigUtils"
+name = "WSS-ToolKit"
 version = "0.0.1"
 authors = [
   { name="WoollySensed Software", email="woollysensed.software@gmail.com" },
@@ -11,6 +11,7 @@ authors = [
 description = "A small set of tools. Primarily intended for WoollySensed Software."
 readme = "README.md"
 requires-python = ">=3.11"
+dependencies = ["toml", "pyyaml"]
 classifiers = [
     "Programming Language :: Python :: 3",
     "License :: OSI Approved :: MIT License",
